# rustrail

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
assets/: BR111.blend  BR111.train.yml  liechtenstein-latest.osm.pbf  train.glb
assets/models/: BR111.glb  BR111.license.txt  BR111.toml  BR147.license.txt  BR147.toml  BR186.glb  BR186.license.txt  BR186.toml  BR52.glb  BR52.toml  BR52_tender.glb  BR52_tender.license.txt  BR52_tender.toml  BadenVIc.license.txt  BadenVIc.toml  DGH500C.license.txt  DGH500C.toml  DHG500C.glb  VS98.glb  VS98.toml  VT98.glb  VT98.license.txt  VT98.toml  eanos.blend  eanos.glb  eanos.license.txt  eanos.toml  nwagen.glb  nwagen.license.txt  nwagen.toml  sbb_ee922.license.txt  sbb_ee922.toml
assets/scenarios/: rb35.toml  re40.toml
lib/wrapped_value_derive_macro/: Cargo.toml
lib/wrapped_value_derive_macro/src/: lib.rs
src/: camera.rs  earcutr.rs  main.rs  mesh.rs  scenario.rs  train.rs  train_controls.rs
src/camera/: mod.rs  tests.rs
src/camera/spawn_camera/: mod.rs  tests.rs
src/camera/spawn_light/: mod.rs  tests.rs
src/camera/update_camera/: mod.rs  tests.rs
src/camera/update_follow/: mod.rs  tests.rs
src/height_map/: mod.rs  tests.rs
src/landscape/: mod.rs  tests.rs
src/landscape/coordinate_point/: mod.rs  tests.rs
src/landscape/despawn_landscapes/: mod.rs  tests.rs
src/landscape/height_map/: mod.rs  tests.rs
src/mesh/: mod.rs
src/scenario/: mod.rs  tests.rs
src/train/: forces.rs  mod.rs  tests.rs
src/train_controls/: mod.rs
src/train_spawn/: mod.rs
src/ui/: mod.rs  tests.rs
(+88 files in other folders)
