[package]
name = "rustrail"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13"
bevy_egui = "0.27"
georaster = "0.1.0"
log = "0.4.21"
proj = "0.27.2"

[dev-dependencies]
coverage-helper = "0.2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
