[package]
name = "rustrail"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14"
bevy_egui = "0.27"
georaster = "0.1"
log = "0.4"
proj = "0.27"
osmpbfreader = "0.16"
bincode = "1.3"
serde = { version = "1", features = ["derive"] }
rand = "0.8.5"
wrapped_value_derive_macro = { path = "lib/wrapped_value_derive_macro" }
earcutr = "0.4"
geo = "0.26"
fast_poisson = "1.0.0"
iyes_perf_ui = "0.2"
toml = "0.8"

[dev-dependencies]
coverage-helper = "0.2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
